[tu] reindent eval notebook

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -11,8 +11,8 @@
    "id": "39fe33c2-aafc-46f2-91ee-655a59a4d22f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:33.221282Z",
-     "start_time": "2024-06-24T10:44:33.211376Z"
+     "end_time": "2024-06-24T12:46:37.509382Z",
+     "start_time": "2024-06-24T12:46:35.905758Z"
     }
    },
    "source": [
@@ -29,13 +29,13 @@
     "import utils as ut"
    ],
    "outputs": [],
-   "execution_count": 134
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:33.431493Z",
-     "start_time": "2024-06-24T10:44:33.413774Z"
+     "end_time": "2024-06-24T12:46:37.525271Z",
+     "start_time": "2024-06-24T12:46:37.511357Z"
     }
    },
    "cell_type": "code",
@@ -50,32 +50,32 @@
    ],
    "id": "6b48abf9dc64ac07",
    "outputs": [],
-   "execution_count": 135
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:33.472284Z",
-     "start_time": "2024-06-24T10:44:33.443746Z"
+     "end_time": "2024-06-24T12:46:37.532491Z",
+     "start_time": "2024-06-24T12:46:37.527138Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def plot_confusion_matrix(y_preds, y_true, labels, color_key):\n",
-    "    cm = confusion_matrix(y_true, y_preds, normalize=\"true\")\n",
-    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "    #labels_for_fig = [l[0:4]+'.' for l in labels]\n",
-    "    labels_for_fig = labels\n",
-    "    disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
-    "                                  display_labels=labels_for_fig)\n",
-    "    #disp.plot(cmap=\"Purples\", values_format=\".2f\", ax=ax, colorbar=False)\n",
-    "    disp.plot(cmap=clrmap_dict[color_key], values_format=\".2f\", ax=ax, colorbar=False)\n",
-    "    plt.title(\"Normalized confusion matrix\")\n",
-    "    plt.show()\n"
+    "  cm = confusion_matrix(y_true, y_preds, normalize=\"true\")\n",
+    "  fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "  #labels_for_fig = [l[0:4]+'.' for l in labels]\n",
+    "  labels_for_fig = labels\n",
+    "  disp = ConfusionMatrixDisplay(confusion_matrix=cm,\n",
+    "                                display_labels=labels_for_fig)\n",
+    "  #disp.plot(cmap=\"Purples\", values_format=\".2f\", ax=ax, colorbar=False)\n",
+    "  disp.plot(cmap=clrmap_dict[color_key], values_format=\".2f\", ax=ax, colorbar=False)\n",
+    "  plt.title(\"Normalized confusion matrix\")\n",
+    "  plt.show()\n"
    ],
    "id": "7542b171be221454",
    "outputs": [],
-   "execution_count": 136
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -86,45 +86,45 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:33.539939Z",
-     "start_time": "2024-06-24T10:44:33.517418Z"
+     "end_time": "2024-06-24T12:46:37.552858Z",
+     "start_time": "2024-06-24T12:46:37.535659Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def eval_res(res_dir, color_mode):\n",
-    "    \"\"\"\n",
-    "    Evaluate humor judgement results for a directory.\n",
+    "  \"\"\"\n",
+    "  Evaluate humor judgement results for a directory.\n",
     "\n",
-    "    Return\n",
-    "        (dict): With keys as follows\n",
-    "                \"sys_orig\": original system results before label postprocessing\n",
-    "                \"sys_res\": system results after preprocessing\n",
-    "                \"ref_res\": reference results\n",
-    "                \"cm\": plain text confusion matrix\n",
-    "    \"\"\"\n",
-    "    assert color_mode in clrmap_dict\n",
-    "    sys_jmt = ut.get_judgement_info_for_dir(res_dir)\n",
-    "    sys_jmt_orig = copy(sys_jmt)\n",
-    "    sys_jmt = [\"other\" if kv[1] == 'no' else \"comic\" for kv in sorted(sys_jmt.items())]\n",
-    "    ref_jmt = [\"other\" if va == 0 else \"comic\" for va in md_df['comic'].tolist()]\n",
-    "    labels = [\"comic\", \"other\"]\n",
-    "    plot_confusion_matrix(sys_jmt, ref_jmt, labels, color_mode)\n",
-    "    # note: 0, 1 in the plain text cm are class indices,\n",
-    "    # NOT 0 no humor and 1 humor\n",
-    "    plain_cm = confusion_matrix(ref_jmt, sys_jmt, normalize=\"true\")\n",
-    "    return {\"sys_orig\": sys_jmt_orig,\n",
-    "            \"sys_res\": sys_jmt, \"ref_res\": ref_jmt, \"cm\": plain_cm}"
+    "  Return\n",
+    "      (dict): With keys as follows\n",
+    "              \"sys_orig\": original system results before label postprocessing\n",
+    "              \"sys_res\": system results after preprocessing\n",
+    "              \"ref_res\": reference results\n",
+    "              \"cm\": plain text confusion matrix\n",
+    "  \"\"\"\n",
+    "  assert color_mode in clrmap_dict\n",
+    "  sys_jmt = ut.get_judgement_info_for_dir(res_dir)\n",
+    "  sys_jmt_orig = copy(sys_jmt)\n",
+    "  sys_jmt = [\"other\" if kv[1] == 'no' else \"comic\" for kv in sorted(sys_jmt.items())]\n",
+    "  ref_jmt = [\"other\" if va == 0 else \"comic\" for va in md_df['comic'].tolist()]\n",
+    "  labels = [\"comic\", \"other\"]\n",
+    "  plot_confusion_matrix(sys_jmt, ref_jmt, labels, color_mode)\n",
+    "  # note: 0, 1 in the plain text cm are class indices,\n",
+    "  # NOT 0 no humor and 1 humor\n",
+    "  plain_cm = confusion_matrix(ref_jmt, sys_jmt, normalize=\"true\")\n",
+    "  return {\"sys_orig\": sys_jmt_orig,\n",
+    "          \"sys_res\": sys_jmt, \"ref_res\": ref_jmt, \"cm\": plain_cm}"
    ],
    "id": "48f575e7c7fa7881",
    "outputs": [],
-   "execution_count": 137
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:34.065202Z",
-     "start_time": "2024-06-24T10:44:33.554653Z"
+     "end_time": "2024-06-24T12:46:37.791782Z",
+     "start_time": "2024-06-24T12:46:37.554126Z"
     }
    },
    "cell_type": "code",
@@ -146,13 +146,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 138
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:34.730401Z",
-     "start_time": "2024-06-24T10:44:34.071633Z"
+     "end_time": "2024-06-24T12:46:38.045274Z",
+     "start_time": "2024-06-24T12:46:37.792838Z"
     }
    },
    "cell_type": "code",
@@ -174,7 +174,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 139
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -185,8 +185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:34.895394Z",
-     "start_time": "2024-06-24T10:44:34.737339Z"
+     "end_time": "2024-06-24T12:46:38.093159Z",
+     "start_time": "2024-06-24T12:46:38.046447Z"
     }
    },
    "cell_type": "code",
@@ -197,14 +197,14 @@
     "print(\"\\t\".join(str(x) for x in (\"idx\", \"rr\", \"sr\", \"century\", \"author\", \"title\")))\n",
     "\n",
     "for idx, (sr, rr) in enumerate(zip(res_35[\"sys_res\"], res_35[\"ref_res\"])):\n",
-    "    if rr != sr:\n",
-    "        century = md_df.loc[md_df['id'] == idx+1, 'centuryBirth'].iat[0]\n",
-    "        author = md_df.loc[md_df['id'] == idx+1, 'author'].iat[0]\n",
-    "        title = md_df.loc[md_df['id'] == idx+1, 'title'].iat[0]\n",
-    "        bad_centuries.append(century)\n",
-    "        bad_authors.append(author)\n",
-    "        bad_idx.append(idx+1)\n",
-    "        print(\"\\t\".join(str(x) for x in (idx, rr, sr, century, author, title)))"
+    "  if rr != sr:\n",
+    "    century = md_df.loc[md_df['id'] == idx + 1, 'centuryBirth'].iat[0]\n",
+    "    author = md_df.loc[md_df['id'] == idx + 1, 'author'].iat[0]\n",
+    "    title = md_df.loc[md_df['id'] == idx + 1, 'title'].iat[0]\n",
+    "    bad_centuries.append(century)\n",
+    "    bad_authors.append(author)\n",
+    "    bad_idx.append(idx + 1)\n",
+    "    print(\"\\t\".join(str(x) for x in (idx, rr, sr, century, author, title)))"
    ],
    "id": "631a28c0f63d234c",
    "outputs": [
@@ -256,18 +256,19 @@
      ]
     }
    ],
-   "execution_count": 140
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:34.939355Z",
-     "start_time": "2024-06-24T10:44:34.902775Z"
+     "end_time": "2024-06-24T12:46:38.107520Z",
+     "start_time": "2024-06-24T12:46:38.094405Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from collections import Counter\n",
+    "\n",
     "Counter(bad_centuries)"
    ],
    "id": "b75a2bffb026b6c9",
@@ -278,18 +279,18 @@
        "Counter({19: 23, 16: 7, 17: 5, 20: 2, 18: 2, 14: 1})"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 141
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:44:34.958423Z",
-     "start_time": "2024-06-24T10:44:34.943025Z"
+     "end_time": "2024-06-24T12:46:38.119080Z",
+     "start_time": "2024-06-24T12:46:38.108667Z"
     }
    },
    "cell_type": "code",
@@ -335,18 +336,18 @@
        "         'Esther Lucila Vázquez': 1})"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 142
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:51:53.844153Z",
-     "start_time": "2024-06-24T10:51:53.692989Z"
+     "end_time": "2024-06-24T12:46:38.172340Z",
+     "start_time": "2024-06-24T12:46:38.121958Z"
     }
    },
    "cell_type": "code",
@@ -355,21 +356,26 @@
     "fname_for_bad_jmts = os.path.join(ana_dir, \"gpt35bads\")\n",
     "bad_model_resps = []\n",
     "with open(fname_for_bad_jmts, mode=\"w\") as infi:\n",
-    "    for bidx in bad_idx:\n",
-    "        model_resps_for_idx = [fname for fname in os.listdir(model_35_res_dir)\n",
-    "                               if fname.startswith(\"humor\") and str.zfill(str(bidx), 4)\n",
-    "                               in fname]\n",
-    "        bad_model_resps.extend(model_resps_for_idx)"
+    "  for bidx in bad_idx:\n",
+    "    model_resps_for_idx = [fname for fname in os.listdir(model_35_res_dir)\n",
+    "                           if fname.startswith(\"humor\") and str.zfill(str(bidx), 4)\n",
+    "                           in fname]\n",
+    "    bad_model_resps.extend(model_resps_for_idx)\n",
+    "    for mrfi in model_resps_for_idx:\n",
+    "      with open(os.path.join(model_35_res_dir, mrfi), mode=\"r\") as fi:\n",
+    "        for line in fi:\n",
+    "          pass\n",
+    "          #infi.write(line)"
    ],
    "id": "b79682e0f49570f8",
    "outputs": [],
-   "execution_count": 147
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T10:52:02.646112Z",
-     "start_time": "2024-06-24T10:52:02.627410Z"
+     "end_time": "2024-06-24T12:46:38.179595Z",
+     "start_time": "2024-06-24T12:46:38.173814Z"
     }
    },
    "cell_type": "code",
@@ -581,20 +587,25 @@
        " 'humor_0100_gpt-35-turbo_2.json']"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 148
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T12:46:38.183383Z",
+     "start_time": "2024-06-24T12:46:38.180970Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "25b40ca88e8cd7c8"
+   "id": "25b40ca88e8cd7c8",
+   "outputs": [],
+   "execution_count": 11
   }
  ],
  "metadata": {
