[tu] tidies up src [an] results with more uniform labels

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -11,11 +11,12 @@
    "id": "39fe33c2-aafc-46f2-91ee-655a59a4d22f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:35.208931Z",
-     "start_time": "2024-06-24T20:28:35.196499Z"
+     "end_time": "2024-06-24T21:05:37.925188Z",
+     "start_time": "2024-06-24T21:05:37.913252Z"
     }
    },
    "source": [
+    "from collections import Counter\n",
     "from copy import copy\n",
     "from importlib import reload\n",
     "import json\n",
@@ -32,13 +33,26 @@
     "import utils as ut"
    ],
    "outputs": [],
-   "execution_count": 256
+   "execution_count": 273
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:35.707571Z",
-     "start_time": "2024-06-24T20:28:35.694774Z"
+     "end_time": "2024-06-24T21:05:38.429791Z",
+     "start_time": "2024-06-24T21:05:38.422118Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "#TODO Label rewriting could be simplified",
+   "id": "fadacde859a7f171",
+   "outputs": [],
+   "execution_count": 274
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T21:05:38.541035Z",
+     "start_time": "2024-06-24T21:05:38.521401Z"
     }
    },
    "cell_type": "code",
@@ -48,13 +62,13 @@
    ],
    "id": "c5f34cfa6a15aa0a",
    "outputs": [],
-   "execution_count": 257
+   "execution_count": 275
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:35.812722Z",
-     "start_time": "2024-06-24T20:28:35.795483Z"
+     "end_time": "2024-06-24T21:05:38.702338Z",
+     "start_time": "2024-06-24T21:05:38.684258Z"
     }
    },
    "cell_type": "code",
@@ -69,13 +83,13 @@
    ],
    "id": "6b48abf9dc64ac07",
    "outputs": [],
-   "execution_count": 258
+   "execution_count": 276
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:35.956452Z",
-     "start_time": "2024-06-24T20:28:35.943174Z"
+     "end_time": "2024-06-24T21:05:38.759628Z",
+     "start_time": "2024-06-24T21:05:38.745371Z"
     }
    },
    "cell_type": "code",
@@ -94,7 +108,7 @@
    ],
    "id": "7542b171be221454",
    "outputs": [],
-   "execution_count": 259
+   "execution_count": 277
   },
   {
    "metadata": {},
@@ -105,155 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:36.167121Z",
-     "start_time": "2024-06-24T20:28:36.153493Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "res_35.keys()\n",
-   "id": "25955a01d913b340",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['sys_orig', 'sys_res_no_postpro', 'sys_res', 'ref_res', 'cm'])"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 260
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:36.361675Z",
-     "start_time": "2024-06-24T20:28:36.339008Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "sorted(res_35[\"sys_orig\"].items())",
-   "id": "62ec8fd560e3dfdc",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('humor_0001_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0002_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0003_gpt-35-turbo', 'no'),\n",
-       " ('humor_0004_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0005_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0006_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0007_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0008_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0009_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0010_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0011_gpt-35-turbo', 'no'),\n",
-       " ('humor_0012_gpt-35-turbo', 'no'),\n",
-       " ('humor_0013_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0014_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0015_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0016_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0017_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0018_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0019_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0020_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0021_gpt-35-turbo', 'no'),\n",
-       " ('humor_0022_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0023_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0024_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0025_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0026_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0027_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0028_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0029_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0030_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0031_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0032_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0033_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0034_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0035_gpt-35-turbo', 'no'),\n",
-       " ('humor_0036_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0037_gpt-35-turbo', 'no'),\n",
-       " ('humor_0038_gpt-35-turbo', 'no'),\n",
-       " ('humor_0039_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0040_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0041_gpt-35-turbo', 'no'),\n",
-       " ('humor_0042_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0043_gpt-35-turbo', 'no'),\n",
-       " ('humor_0044_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0045_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0046_gpt-35-turbo', 'no'),\n",
-       " ('humor_0047_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0048_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0049_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0050_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0051_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0052_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0053_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0054_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0055_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0056_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0057_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0058_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0059_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0060_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0061_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0062_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0063_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0064_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0065_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0066_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0067_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0068_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0069_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0070_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0071_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0072_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0073_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0074_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0075_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0076_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0077_gpt-35-turbo', 'no'),\n",
-       " ('humor_0078_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0079_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0080_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0081_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0082_gpt-35-turbo', 'no'),\n",
-       " ('humor_0083_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0084_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0085_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0086_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0087_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0088_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0089_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0090_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0091_gpt-35-turbo', 'no'),\n",
-       " ('humor_0092_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0093_gpt-35-turbo', 'no'),\n",
-       " ('humor_0094_gpt-35-turbo', 'no'),\n",
-       " ('humor_0095_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0096_gpt-35-turbo', 'no'),\n",
-       " ('humor_0097_gpt-35-turbo', 'no'),\n",
-       " ('humor_0098_gpt-35-turbo', 'no'),\n",
-       " ('humor_0099_gpt-35-turbo', 'sí'),\n",
-       " ('humor_0100_gpt-35-turbo', 'no')]"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 261
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:36.480361Z",
-     "start_time": "2024-06-24T20:28:36.463102Z"
+     "end_time": "2024-06-24T21:05:38.886220Z",
+     "start_time": "2024-06-24T21:05:38.870250Z"
     }
    },
    "cell_type": "code",
@@ -284,13 +151,13 @@
    ],
    "id": "48f575e7c7fa7881",
    "outputs": [],
-   "execution_count": 262
+   "execution_count": 278
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.099120Z",
-     "start_time": "2024-06-24T20:28:36.615683Z"
+     "end_time": "2024-06-24T21:05:39.644808Z",
+     "start_time": "2024-06-24T21:05:39.095190Z"
     }
    },
    "cell_type": "code",
@@ -312,13 +179,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 263
+   "execution_count": 279
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.652855Z",
-     "start_time": "2024-06-24T20:28:37.104936Z"
+     "end_time": "2024-06-24T21:05:40.163612Z",
+     "start_time": "2024-06-24T21:05:39.651720Z"
     }
    },
    "cell_type": "code",
@@ -340,7 +207,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 264
+   "execution_count": 280
   },
   {
    "metadata": {},
@@ -351,8 +218,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.816963Z",
-     "start_time": "2024-06-24T20:28:37.658038Z"
+     "end_time": "2024-06-24T21:05:40.322229Z",
+     "start_time": "2024-06-24T21:05:40.167997Z"
     }
    },
    "cell_type": "code",
@@ -418,21 +285,17 @@
      ]
     }
    ],
-   "execution_count": 265
+   "execution_count": 281
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.863932Z",
-     "start_time": "2024-06-24T20:28:37.827132Z"
+     "end_time": "2024-06-24T21:05:40.366994Z",
+     "start_time": "2024-06-24T21:05:40.330226Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "from collections import Counter\n",
-    "\n",
-    "Counter(bad_centuries)"
-   ],
+   "source": "Counter(bad_centuries)",
    "id": "b75a2bffb026b6c9",
    "outputs": [
     {
@@ -441,18 +304,18 @@
        "Counter({19: 21, 16: 6, 17: 5, 20: 3, 18: 1})"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 266
+   "execution_count": 282
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.885378Z",
-     "start_time": "2024-06-24T20:28:37.868945Z"
+     "end_time": "2024-06-24T21:05:40.387545Z",
+     "start_time": "2024-06-24T21:05:40.373660Z"
     }
    },
    "cell_type": "code",
@@ -493,18 +356,18 @@
        "         'Esther Lucila Vázquez': 1})"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 267
+   "execution_count": 283
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.907676Z",
-     "start_time": "2024-06-24T20:28:37.889605Z"
+     "end_time": "2024-06-24T21:05:40.406675Z",
+     "start_time": "2024-06-24T21:05:40.392693Z"
     }
    },
    "cell_type": "code",
@@ -616,42 +479,41 @@
        " 'comic']"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 268
+   "execution_count": 284
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:37.922055Z",
-     "start_time": "2024-06-24T20:28:37.912206Z"
+     "end_time": "2024-06-24T21:05:40.420944Z",
+     "start_time": "2024-06-24T21:05:40.410999Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def label_rewriter(label):\n",
-    "  # if label.lower() == \"no\":\n",
-    "  #   return \"other\"\n",
-    "  # elif label.lower() in (\"incierto\", \"incierta\"):\n",
-    "  #   return \"other-incierto\"\n",
-    "  # elif label.lower() == \"sí\":\n",
-    "  #   return \"comic\"\n",
-    "  # else:\n",
-    "  #   return label.lower()\n",
-    "  return label"
+    "  if label.lower() == \"no\":\n",
+    "    return \"other\"\n",
+    "  elif label.lower() in (\"incierto\", \"incierta\"):\n",
+    "    return \"other-incierto\"\n",
+    "  elif label.lower() == \"sí\":\n",
+    "    return \"comic\"\n",
+    "  else:\n",
+    "    return label.lower()"
    ],
    "id": "f2e3dc64fd04ce4b",
    "outputs": [],
-   "execution_count": 269
+   "execution_count": 285
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:38.456126Z",
-     "start_time": "2024-06-24T20:28:37.927884Z"
+     "end_time": "2024-06-24T21:05:41.022891Z",
+     "start_time": "2024-06-24T21:05:40.426015Z"
     }
    },
    "cell_type": "code",
@@ -691,20 +553,17 @@
    ],
    "id": "b79682e0f49570f8",
    "outputs": [],
-   "execution_count": 270
+   "execution_count": 286
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:38.475296Z",
-     "start_time": "2024-06-24T20:28:38.461770Z"
+     "end_time": "2024-06-24T21:05:41.041913Z",
+     "start_time": "2024-06-24T21:05:41.028186Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "\n",
-    "jso"
-   ],
+   "source": "jso",
    "id": "5b5be5e515ac2db1",
    "outputs": [
     {
@@ -714,18 +573,18 @@
        " 'reason': 'El poema tiene elementos que podrían considerarse cómicos, como comparar la luna con una rosa de nieve o describir la luz en los ojos y mejillas de una persona de manera poética. Sin embargo, el tono general del poema es más serio y solemne, lo que hace que sea difícil determinar si es cómico o no.'}"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 271
+   "execution_count": 287
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:38.504340Z",
-     "start_time": "2024-06-24T20:28:38.484729Z"
+     "end_time": "2024-06-24T21:05:41.070402Z",
+     "start_time": "2024-06-24T21:05:41.049799Z"
     }
    },
    "cell_type": "code",
@@ -845,25 +704,25 @@
        " 'humor_0100_gpt-35-turbo_3.json']"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 272
+   "execution_count": 288
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:28:38.517012Z",
-     "start_time": "2024-06-24T20:28:38.510822Z"
+     "end_time": "2024-06-24T21:05:41.081763Z",
+     "start_time": "2024-06-24T21:05:41.075095Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "25b40ca88e8cd7c8",
    "outputs": [],
-   "execution_count": 272
+   "execution_count": 288
   }
  ],
  "metadata": {
