--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -496,6 +496,11 @@
    "cell_type": "code",
    "source": [
     "def label_rewriter(label):\n",
+    "  \"\"\"\n",
+    "  Should help only for labels in output directory;\n",
+    "  labels from evaluation function are already\n",
+    "  restricted to those allowed in `cf.orig_labels`\n",
+    "  \"\"\"\n",
     "  if label.lower() == \"no\":\n",
     "    return \"other\"\n",
     "  elif label.lower() in (\"incierto\", \"incierta\"):\n",
@@ -512,8 +517,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:41.022891Z",
-     "start_time": "2024-06-24T21:05:40.426015Z"
+     "end_time": "2024-06-24T21:33:21.344502Z",
+     "start_time": "2024-06-24T21:33:20.594739Z"
     }
    },
    "cell_type": "code",
@@ -521,208 +526,63 @@
     "# results were assigned to variable res_35\n",
     "\n",
     "ana_dir = \"../ana/ana\"\n",
-    "fname_for_bad_jmts = os.path.join(ana_dir, \"gpt35bads\")\n",
+    "fname_for_bad_jmts = os.path.join(ana_dir, \"gpt35bads_all\")\n",
+    "fname_for_bad_jmts_fp = os.path.join(ana_dir, \"gpt35bads_fp\")\n",
+    "fname_for_bad_jmts_fn = os.path.join(ana_dir, \"gpt35bads_fn\")\n",
     "bad_model_resps = []\n",
     "dones_for_pfx = {}\n",
     "poem_text = \"\"\n",
-    "with open(fname_for_bad_jmts, mode=\"w\") as oufi:\n",
+    "with open(fname_for_bad_jmts, mode=\"w\") as oufi_all, \\\n",
+    "        open(fname_for_bad_jmts_fp, mode=\"w\") as oufi_fp, \\\n",
+    "        open(fname_for_bad_jmts_fn, mode=\"w\") as oufi_fn:\n",
     "  for example_idx, bidx in enumerate(bad_idx):\n",
+    "    # get model responses for error cases\n",
     "    model_resps_for_idx = sorted([fname for fname in sorted(os.listdir(model_35_res_dir))\n",
     "                           if fname.startswith(\"humor\") and str.zfill(str(bidx), 4)\n",
     "                           in fname])\n",
     "    bad_model_resps.extend(model_resps_for_idx[0:cf.max_choices_for_textometry])\n",
+    "    # iterate over error cases\n",
     "    for mrfi in model_resps_for_idx[0:cf.max_choices_for_textometry]:\n",
     "      mrfi_pfx = re.sub(r\"_\\d\\..*$\", \"\", mrfi)\n",
     "      if mrfi_pfx not in dones_for_pfx:\n",
-    "        poem_text = ut.get_poem_text_by_id(bidx) \n",
+    "        poem_text = ut.get_poem_text_by_id(bidx)\n",
+    "      # write out error info for analysis\n",
     "      with open(os.path.join(model_35_res_dir, mrfi), mode=\"r\") as respfi:\n",
     "        author = md_df.loc[md_df['id'] == bidx, 'author'].iat[0]\n",
     "        title = md_df.loc[md_df['id'] == bidx, 'title'].iat[0]\n",
     "        century = md_df.loc[md_df['id'] == bidx, 'centuryBirth'].iat[0]\n",
     "        txt = respfi.read()\n",
     "        jso = json.loads(txt)\n",
-    "        # jmt_from_out (directly from output dir) is to compare with eval result\n",
-    "        jmt_from_out, reason = jso[\"judgement\"], jso[\"reason\"]\n",
-    "        jmt_from_res = res_35[\"sys_res\"][bidx - 1]\n",
+    "        # jmt_from_outdir (directly from output dir) is to compare with eval result\n",
+    "        jmt_from_outdir, reason = jso[\"judgement\"], jso[\"reason\"]\n",
+    "        jmt_from_eval = res_35[\"sys_res\"][bidx - 1]\n",
     "        ref_res = res_35[\"ref_res\"][bidx - 1]\n",
+    "        # keep track of how many for prefix to only output as many choices as analyzed in textometry\n",
     "        dones_for_pfx.setdefault(mrfi_pfx, 1)\n",
     "        dones_for_pfx[mrfi_pfx] += 1\n",
+    "        # makes outdir labels more homogeneous with labels output by eval\n",
+    "        jmt_from_outdir_rw = label_rewriter(jmt_from_outdir)\n",
+    "        jmt_from_eval_rw = label_rewriter(jmt_from_eval)\n",
+    "        ref_res_rw = label_rewriter(ref_res)\n",
+    "        # choose output file based on error type\n",
+    "        #   this is based on assumption that all results are errors\n",
+    "        #   and only the two errors below are possible\n",
+    "        assert jmt_from_eval_rw in (\"comic\", \"other\") and \\\n",
+    "                ref_res_rw in (\"comic\", \"other\") and \\\n",
+    "                jmt_from_eval_rw != ref_res_rw\n",
+    "        if jmt_from_eval_rw == \"comic\" and ref_res_rw == \"other\":\n",
+    "          oufi_partial = oufi_fp\n",
+    "        elif jmt_from_eval_rw == \"other\" and ref_res_rw == \"comic\":\n",
+    "          oufi_partial = oufi_fn\n",
+    "        # prepare output info\n",
     "        md_for_ana = f\" {author} ~ {title} ~ {century}\"\n",
     "        logsep = \"\\n\" + f\"{'*' * 20} IDX [{bidx}] ({example_idx+1}/{len(bad_idx)})\" + md_for_ana + \"\\n\\n\" + poem_text + \"\\n\" if dones_for_pfx[mrfi_pfx] == cf.max_choices_for_textometry -1 else \"\"\n",
-    "        oufi.write(f\"\\n{logsep}\\nBad result for [{bidx}]\\tSysRes Choice: [{label_rewriter(jmt_from_out)}]; *SysRes Aggregated*: [{label_rewriter(jmt_from_res)}]; REFERENCE: [{label_rewriter(ref_res)}]\\n\\t{reason}\")"
+    "        for oufi in oufi_partial, oufi_all:\n",
+    "          oufi.write(f\"\\n{logsep}\\nBad result for [{bidx}]\\tSysRes Choice: [{jmt_from_outdir_rw}]; *SysRes Aggregated*: [{jmt_from_eval_rw}]; REFERENCE: [{ref_res_rw}]\\n\\t{reason}\")"
    ],
    "id": "b79682e0f49570f8",
    "outputs": [],
-   "execution_count": 286
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:41.041913Z",
-     "start_time": "2024-06-24T21:05:41.028186Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "jso",
-   "id": "5b5be5e515ac2db1",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'judgement': 'incierto',\n",
-       " 'reason': 'El poema tiene elementos que podrían considerarse cómicos, como comparar la luna con una rosa de nieve o describir la luz en los ojos y mejillas de una persona de manera poética. Sin embargo, el tono general del poema es más serio y solemne, lo que hace que sea difícil determinar si es cómico o no.'}"
-      ]
-     },
-     "execution_count": 287,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 287
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:41.070402Z",
-     "start_time": "2024-06-24T21:05:41.049799Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "bad_model_resps",
-   "id": "9ad4b794d4899eb",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['humor_0003_gpt-35-turbo_1.json',\n",
-       " 'humor_0003_gpt-35-turbo_2.json',\n",
-       " 'humor_0003_gpt-35-turbo_3.json',\n",
-       " 'humor_0008_gpt-35-turbo_1.json',\n",
-       " 'humor_0008_gpt-35-turbo_2.json',\n",
-       " 'humor_0008_gpt-35-turbo_3.json',\n",
-       " 'humor_0011_gpt-35-turbo_1.json',\n",
-       " 'humor_0011_gpt-35-turbo_2.json',\n",
-       " 'humor_0011_gpt-35-turbo_3.json',\n",
-       " 'humor_0012_gpt-35-turbo_1.json',\n",
-       " 'humor_0012_gpt-35-turbo_2.json',\n",
-       " 'humor_0012_gpt-35-turbo_3.json',\n",
-       " 'humor_0021_gpt-35-turbo_1.json',\n",
-       " 'humor_0021_gpt-35-turbo_2.json',\n",
-       " 'humor_0021_gpt-35-turbo_3.json',\n",
-       " 'humor_0026_gpt-35-turbo_1.json',\n",
-       " 'humor_0026_gpt-35-turbo_2.json',\n",
-       " 'humor_0026_gpt-35-turbo_3.json',\n",
-       " 'humor_0028_gpt-35-turbo_1.json',\n",
-       " 'humor_0028_gpt-35-turbo_2.json',\n",
-       " 'humor_0028_gpt-35-turbo_3.json',\n",
-       " 'humor_0029_gpt-35-turbo_1.json',\n",
-       " 'humor_0029_gpt-35-turbo_2.json',\n",
-       " 'humor_0029_gpt-35-turbo_3.json',\n",
-       " 'humor_0030_gpt-35-turbo_1.json',\n",
-       " 'humor_0030_gpt-35-turbo_2.json',\n",
-       " 'humor_0030_gpt-35-turbo_3.json',\n",
-       " 'humor_0033_gpt-35-turbo_1.json',\n",
-       " 'humor_0033_gpt-35-turbo_2.json',\n",
-       " 'humor_0033_gpt-35-turbo_3.json',\n",
-       " 'humor_0034_gpt-35-turbo_1.json',\n",
-       " 'humor_0034_gpt-35-turbo_2.json',\n",
-       " 'humor_0034_gpt-35-turbo_3.json',\n",
-       " 'humor_0036_gpt-35-turbo_1.json',\n",
-       " 'humor_0036_gpt-35-turbo_2.json',\n",
-       " 'humor_0036_gpt-35-turbo_3.json',\n",
-       " 'humor_0040_gpt-35-turbo_1.json',\n",
-       " 'humor_0040_gpt-35-turbo_2.json',\n",
-       " 'humor_0040_gpt-35-turbo_3.json',\n",
-       " 'humor_0042_gpt-35-turbo_1.json',\n",
-       " 'humor_0042_gpt-35-turbo_2.json',\n",
-       " 'humor_0042_gpt-35-turbo_3.json',\n",
-       " 'humor_0044_gpt-35-turbo_1.json',\n",
-       " 'humor_0044_gpt-35-turbo_2.json',\n",
-       " 'humor_0044_gpt-35-turbo_3.json',\n",
-       " 'humor_0045_gpt-35-turbo_1.json',\n",
-       " 'humor_0045_gpt-35-turbo_2.json',\n",
-       " 'humor_0045_gpt-35-turbo_3.json',\n",
-       " 'humor_0047_gpt-35-turbo_1.json',\n",
-       " 'humor_0047_gpt-35-turbo_2.json',\n",
-       " 'humor_0047_gpt-35-turbo_3.json',\n",
-       " 'humor_0048_gpt-35-turbo_1.json',\n",
-       " 'humor_0048_gpt-35-turbo_2.json',\n",
-       " 'humor_0048_gpt-35-turbo_3.json',\n",
-       " 'humor_0049_gpt-35-turbo_1.json',\n",
-       " 'humor_0049_gpt-35-turbo_2.json',\n",
-       " 'humor_0049_gpt-35-turbo_3.json',\n",
-       " 'humor_0050_gpt-35-turbo_1.json',\n",
-       " 'humor_0050_gpt-35-turbo_2.json',\n",
-       " 'humor_0050_gpt-35-turbo_3.json',\n",
-       " 'humor_0051_gpt-35-turbo_1.json',\n",
-       " 'humor_0051_gpt-35-turbo_2.json',\n",
-       " 'humor_0051_gpt-35-turbo_3.json',\n",
-       " 'humor_0078_gpt-35-turbo_1.json',\n",
-       " 'humor_0078_gpt-35-turbo_2.json',\n",
-       " 'humor_0078_gpt-35-turbo_3.json',\n",
-       " 'humor_0079_gpt-35-turbo_1.json',\n",
-       " 'humor_0079_gpt-35-turbo_2.json',\n",
-       " 'humor_0079_gpt-35-turbo_3.json',\n",
-       " 'humor_0080_gpt-35-turbo_1.json',\n",
-       " 'humor_0080_gpt-35-turbo_2.json',\n",
-       " 'humor_0080_gpt-35-turbo_3.json',\n",
-       " 'humor_0081_gpt-35-turbo_1.json',\n",
-       " 'humor_0081_gpt-35-turbo_2.json',\n",
-       " 'humor_0081_gpt-35-turbo_3.json',\n",
-       " 'humor_0083_gpt-35-turbo_1.json',\n",
-       " 'humor_0083_gpt-35-turbo_2.json',\n",
-       " 'humor_0083_gpt-35-turbo_3.json',\n",
-       " 'humor_0084_gpt-35-turbo_1.json',\n",
-       " 'humor_0084_gpt-35-turbo_2.json',\n",
-       " 'humor_0084_gpt-35-turbo_3.json',\n",
-       " 'humor_0086_gpt-35-turbo_1.json',\n",
-       " 'humor_0086_gpt-35-turbo_2.json',\n",
-       " 'humor_0086_gpt-35-turbo_3.json',\n",
-       " 'humor_0088_gpt-35-turbo_1.json',\n",
-       " 'humor_0088_gpt-35-turbo_2.json',\n",
-       " 'humor_0088_gpt-35-turbo_3.json',\n",
-       " 'humor_0089_gpt-35-turbo_1.json',\n",
-       " 'humor_0089_gpt-35-turbo_2.json',\n",
-       " 'humor_0089_gpt-35-turbo_3.json',\n",
-       " 'humor_0090_gpt-35-turbo_1.json',\n",
-       " 'humor_0090_gpt-35-turbo_2.json',\n",
-       " 'humor_0090_gpt-35-turbo_3.json',\n",
-       " 'humor_0092_gpt-35-turbo_1.json',\n",
-       " 'humor_0092_gpt-35-turbo_2.json',\n",
-       " 'humor_0092_gpt-35-turbo_3.json',\n",
-       " 'humor_0094_gpt-35-turbo_1.json',\n",
-       " 'humor_0094_gpt-35-turbo_2.json',\n",
-       " 'humor_0094_gpt-35-turbo_3.json',\n",
-       " 'humor_0095_gpt-35-turbo_1.json',\n",
-       " 'humor_0095_gpt-35-turbo_2.json',\n",
-       " 'humor_0095_gpt-35-turbo_3.json',\n",
-       " 'humor_0099_gpt-35-turbo_1.json',\n",
-       " 'humor_0099_gpt-35-turbo_2.json',\n",
-       " 'humor_0099_gpt-35-turbo_3.json',\n",
-       " 'humor_0100_gpt-35-turbo_1.json',\n",
-       " 'humor_0100_gpt-35-turbo_2.json',\n",
-       " 'humor_0100_gpt-35-turbo_3.json']"
-      ]
-     },
-     "execution_count": 288,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 288
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:41.081763Z",
-     "start_time": "2024-06-24T21:05:41.075095Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "25b40ca88e8cd7c8",
-   "outputs": [],
-   "execution_count": 288
+   "execution_count": 294
   }
  ],
  "metadata": {
