--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -576,6 +576,7 @@
     "          oufi_partial = oufi_fn\n",
     "        # prepare output info\n",
     "        md_for_ana = f\" {author} ~ {title} ~ {century}\"\n",
+    "        # total in len(bad_idx) no good for fp and fn total, not calculated\n",
     "        logsep = \"\\n\" + f\"{'*' * 20} IDX [{bidx}] ({example_idx+1}/{len(bad_idx)})\" + md_for_ana + \"\\n\\n\" + poem_text + \"\\n\" if dones_for_pfx[mrfi_pfx] == cf.max_choices_for_textometry -1 else \"\"\n",
     "        for oufi in oufi_partial, oufi_all:\n",
     "          oufi.write(f\"\\n{logsep}\\nBad result for [{bidx}]\\tSysRes Choice: [{jmt_from_outdir_rw}]; *SysRes Aggregated*: [{jmt_from_eval_rw}]; REFERENCE: [{ref_res_rw}]\\n\\t{reason}\")"
