--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -525,13 +525,16 @@
    "source": [
     "# results were assigned to variable res_35\n",
     "\n",
+    "# IO\n",
     "ana_dir = \"../ana/ana\"\n",
     "fname_for_bad_jmts = os.path.join(ana_dir, \"gpt35bads_all\")\n",
     "fname_for_bad_jmts_fp = os.path.join(ana_dir, \"gpt35bads_fp\")\n",
     "fname_for_bad_jmts_fn = os.path.join(ana_dir, \"gpt35bads_fn\")\n",
-    "bad_model_resps = []\n",
+    "bad_model_resps = [] #TODO why needed (if)?\n",
     "dones_for_pfx = {}\n",
     "poem_text = \"\"\n",
+    "\n",
+    "# open output files\n",
     "with open(fname_for_bad_jmts, mode=\"w\") as oufi_all, \\\n",
     "        open(fname_for_bad_jmts_fp, mode=\"w\") as oufi_fp, \\\n",
     "        open(fname_for_bad_jmts_fn, mode=\"w\") as oufi_fn:\n",
@@ -540,6 +543,7 @@
     "    model_resps_for_idx = sorted([fname for fname in sorted(os.listdir(model_35_res_dir))\n",
     "                           if fname.startswith(\"humor\") and str.zfill(str(bidx), 4)\n",
     "                           in fname])\n",
+    "    #TODO this looks useless, why still here?\n",
     "    bad_model_resps.extend(model_resps_for_idx[0:cf.max_choices_for_textometry])\n",
     "    # iterate over error cases\n",
     "    for mrfi in model_resps_for_idx[0:cf.max_choices_for_textometry]:\n",
@@ -584,6 +588,108 @@
    "id": "b79682e0f49570f8",
    "outputs": [],
    "execution_count": 294
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T22:01:41.296946Z",
+     "start_time": "2024-06-24T22:01:41.259327Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def analyze_results(res, model_res_dir, ana_dir, bad_idx, md_df, model_name):\n",
+    "  \"\"\"\n",
+    "  Analyzes the results of a model.\n",
+    "  \n",
+    "  Args:\n",
+    "      res (dict): The results assigned to the variable (e.g., `res_35` or `res_4o`).\n",
+    "      model_res_dir (str): The directory where the model results are stored (e.g., `model_35_res_dir` or `model_4o_res_dir`).\n",
+    "      ana_dir (str): The directory where the analysis results will be stored.\n",
+    "      bad_idx (list): The indices of the bad results.\n",
+    "      md_df (DataFrame): The metadata DataFrame.\n",
+    "      model_name (str): The name of the model (e.g., `gpt-35-turbo` or `gpt-4o`).\n",
+    "  Returns:\n",
+    "    None\n",
+    "  \"\"\"\n",
+    "  fname_for_bad_jmts = os.path.join(ana_dir, f\"{model_name}bads_all\")\n",
+    "  fname_for_bad_jmts_fp = os.path.join(ana_dir, f\"{model_name}bads_fp\")\n",
+    "  fname_for_bad_jmts_fn = os.path.join(ana_dir, f\"{model_name}bads_fn\")\n",
+    "  bad_model_resps = [] #TODO why needed (if)?\n",
+    "  dones_for_pfx = {}\n",
+    "  poem_text = \"\"\n",
+    "  # open output files\n",
+    "  with open(fname_for_bad_jmts, mode=\"w\") as oufi_all, \\\n",
+    "      open(fname_for_bad_jmts_fp, mode=\"w\") as oufi_fp, \\\n",
+    "      open(fname_for_bad_jmts_fn, mode=\"w\") as oufi_fn:\n",
+    "    for example_idx, bidx in enumerate(bad_idx):\n",
+    "      # get model responses for error cases\n",
+    "      model_resps_for_idx = sorted([fname for fname in sorted(os.listdir(model_res_dir))\n",
+    "                                    if fname.startswith(\"humor\") and str.zfill(str(bidx), 4)\n",
+    "                                    in fname])\n",
+    "      #TODO This looks useless, why still here?\n",
+    "      bad_model_resps.extend(model_resps_for_idx[0:cf.max_choices_for_textometry])\n",
+    "      # iterate over error cases\n",
+    "      for mrfi in model_resps_for_idx[0:cf.max_choices_for_textometry]:\n",
+    "        mrfi_pfx = re.sub(r\"_\\d\\..*$\", \"\", mrfi)\n",
+    "        if mrfi_pfx not in dones_for_pfx:\n",
+    "          poem_text = ut.get_poem_text_by_id(bidx)\n",
+    "        # write out error info for analysis\n",
+    "        with open(os.path.join(model_res_dir, mrfi), mode=\"r\") as respfi:\n",
+    "          author = md_df.loc[md_df['id'] == bidx, 'author'].iat[0]\n",
+    "          title = md_df.loc[md_df['id'] == bidx, 'title'].iat[0]\n",
+    "          century = md_df.loc[md_df['id'] == bidx, 'centuryBirth'].iat[0]\n",
+    "          txt = respfi.read()\n",
+    "          jso = json.loads(txt)\n",
+    "          # jmt_from_outdir (directly from output dir) is to compare with eval result\n",
+    "          jmt_from_outdir, reason = jso[\"judgement\"], jso[\"reason\"]\n",
+    "          jmt_from_eval = res[\"sys_res\"][bidx - 1]\n",
+    "          ref_res = res[\"ref_res\"][bidx - 1]\n",
+    "          # keep track of how many for prefix to only output as many choices as analyzed in textometry\n",
+    "          dones_for_pfx.setdefault(mrfi_pfx, 1)\n",
+    "          dones_for_pfx[mrfi_pfx] += 1\n",
+    "          # makes outdir labels more homogeneous with labels output by eval\n",
+    "          jmt_from_outdir_rw = label_rewriter(jmt_from_outdir)\n",
+    "          jmt_from_eval_rw = label_rewriter(jmt_from_eval)\n",
+    "          ref_res_rw = label_rewriter(ref_res)\n",
+    "          # choose output file based on error type\n",
+    "          #   this is based on assumption that all results are errors\n",
+    "          #   and only the two errors below are possible\n",
+    "          assert jmt_from_eval_rw in (\"comic\", \"other\") and \\\n",
+    "                 ref_res_rw in (\"comic\", \"other\") and \\\n",
+    "                 jmt_from_eval_rw != ref_res_rw\n",
+    "          if jmt_from_eval_rw == \"comic\" and ref_res_rw == \"other\":\n",
+    "            oufi_partial = oufi_fp\n",
+    "          elif jmt_from_eval_rw == \"other\" and ref_res_rw == \"comic\":\n",
+    "            oufi_partial = oufi_fn\n",
+    "          # prepare output info\n",
+    "          md_for_ana = f\" {author} ~ {title} ~ {century}\"\n",
+    "          # total in len(bad_idx) no good for fp and fn total, not calculated\n",
+    "          logsep = \"\\n\" + f\"{'*' * 20} IDX [{bidx}] ({example_idx + 1}/{len(bad_idx)})\" + md_for_ana + \"\\n\\n\" + poem_text + \"\\n\" if \\\n",
+    "          dones_for_pfx[mrfi_pfx] == cf.max_choices_for_textometry - 1 else \"\"\n",
+    "          for oufi in oufi_partial, oufi_all:\n",
+    "            oufi.write(\n",
+    "              f\"\\n{logsep}\\nBad result for [{bidx}]\\tSysRes Choice: [{jmt_from_outdir_rw}]; *SysRes Aggregated*: [{jmt_from_eval_rw}]; REFERENCE: [{ref_res_rw}]\\n\\t{reason}\")"
+   ],
+   "id": "fba087a8d57babe0",
+   "outputs": [],
+   "execution_count": 299
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T22:02:03.566891Z",
+     "start_time": "2024-06-24T22:02:02.881928Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# analyze results for gpt-35-turbo\n",
+    "analyze_results(res_35, model_35_res_dir, ana_dir, bad_idx, md_df, \"gpt35\")"
+   ],
+   "id": "afada7506590530",
+   "outputs": [],
+   "execution_count": 301
   }
  ],
  "metadata": {
