[mn] turns code to get error result indices into a function

--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -11,8 +11,8 @@
    "id": "39fe33c2-aafc-46f2-91ee-655a59a4d22f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:37.925188Z",
-     "start_time": "2024-06-24T21:05:37.913252Z"
+     "end_time": "2024-06-24T22:12:28.486631Z",
+     "start_time": "2024-06-24T22:12:28.472031Z"
     }
    },
    "source": [
@@ -33,26 +33,26 @@
     "import utils as ut"
    ],
    "outputs": [],
-   "execution_count": 273
+   "execution_count": 304
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:38.429791Z",
-     "start_time": "2024-06-24T21:05:38.422118Z"
+     "end_time": "2024-06-24T22:12:28.867830Z",
+     "start_time": "2024-06-24T22:12:28.860374Z"
     }
    },
    "cell_type": "code",
    "source": "#TODO Label rewriting could be simplified",
    "id": "fadacde859a7f171",
    "outputs": [],
-   "execution_count": 274
+   "execution_count": 305
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:38.541035Z",
-     "start_time": "2024-06-24T21:05:38.521401Z"
+     "end_time": "2024-06-24T22:12:28.933616Z",
+     "start_time": "2024-06-24T22:12:28.916601Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
    ],
    "id": "c5f34cfa6a15aa0a",
    "outputs": [],
-   "execution_count": 275
+   "execution_count": 306
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:38.702338Z",
-     "start_time": "2024-06-24T21:05:38.684258Z"
+     "end_time": "2024-06-24T22:12:29.122407Z",
+     "start_time": "2024-06-24T22:12:29.100035Z"
     }
    },
    "cell_type": "code",
@@ -83,13 +83,13 @@
    ],
    "id": "6b48abf9dc64ac07",
    "outputs": [],
-   "execution_count": 276
+   "execution_count": 307
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:38.759628Z",
-     "start_time": "2024-06-24T21:05:38.745371Z"
+     "end_time": "2024-06-24T22:12:29.198375Z",
+     "start_time": "2024-06-24T22:12:29.180348Z"
     }
    },
    "cell_type": "code",
@@ -108,7 +108,7 @@
    ],
    "id": "7542b171be221454",
    "outputs": [],
-   "execution_count": 277
+   "execution_count": 308
   },
   {
    "metadata": {},
@@ -119,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:38.886220Z",
-     "start_time": "2024-06-24T21:05:38.870250Z"
+     "end_time": "2024-06-24T22:12:29.326808Z",
+     "start_time": "2024-06-24T22:12:29.310365Z"
     }
    },
    "cell_type": "code",
@@ -151,13 +151,13 @@
    ],
    "id": "48f575e7c7fa7881",
    "outputs": [],
-   "execution_count": 278
+   "execution_count": 309
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:39.644808Z",
-     "start_time": "2024-06-24T21:05:39.095190Z"
+     "end_time": "2024-06-24T22:12:30.064988Z",
+     "start_time": "2024-06-24T22:12:29.438196Z"
     }
    },
    "cell_type": "code",
@@ -179,13 +179,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 279
+   "execution_count": 310
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.163612Z",
-     "start_time": "2024-06-24T21:05:39.651720Z"
+     "end_time": "2024-06-24T22:12:30.560374Z",
+     "start_time": "2024-06-24T22:12:30.071158Z"
     }
    },
    "cell_type": "code",
@@ -207,7 +207,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 280
+   "execution_count": 311
   },
   {
    "metadata": {},
@@ -218,8 +218,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.322229Z",
-     "start_time": "2024-06-24T21:05:40.167997Z"
+     "end_time": "2024-06-24T22:12:30.684425Z",
+     "start_time": "2024-06-24T22:12:30.563877Z"
     }
    },
    "cell_type": "code",
@@ -285,13 +285,108 @@
      ]
     }
    ],
-   "execution_count": 281
+   "execution_count": 312
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.366994Z",
-     "start_time": "2024-06-24T21:05:40.330226Z"
+     "end_time": "2024-06-24T22:12:30.728658Z",
+     "start_time": "2024-06-24T22:12:30.691963Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def get_error_case_idx_and_metadata(res, md_df):\n",
+    "  \"\"\"\n",
+    "  Get the indices of the bad results and metadata like author or century.\n",
+    "  Args:\n",
+    "    res (dict): The results to get error cases for; `dict` format produced by `eval_res()`.\n",
+    "    md_df (DataFrame): Dataframe with metadata.\n",
+    "\n",
+    "  Returns:\n",
+    "    tuple: Lists with the indices of the bad results, the centuries of the bad results, and the authors of the bad results.\n",
+    "  \"\"\"\n",
+    "  bad_centuries = []\n",
+    "  bad_authors = []\n",
+    "  bad_idx = []\n",
+    "  print(\"\\t\".join(str(x) for x in (\"idx\", \"rr\", \"sr\", \"century\", \"author\", \"title\"))) \n",
+    "  for idx, (sr, rr) in enumerate(zip(res[\"sys_res\"], res[\"ref_res\"])):\n",
+    "    if rr != sr:\n",
+    "      century = md_df.loc[md_df['id'] == idx + 1, 'centuryBirth'].iat[0]\n",
+    "      author = md_df.loc[md_df['id'] == idx + 1, 'author'].iat[0]\n",
+    "      title = md_df.loc[md_df['id'] == idx + 1, 'title'].iat[0]\n",
+    "      bad_centuries.append(century)\n",
+    "      bad_authors.append(author)\n",
+    "      bad_idx.append(idx + 1)\n",
+    "      print(\"\\t\".join(str(x) for x in (idx+1, rr, sr, century, author, title)))\n",
+    "  return bad_idx, bad_centuries, bad_authors"
+   ],
+   "id": "946137e58d3785b5",
+   "outputs": [],
+   "execution_count": 313
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T22:12:30.843649Z",
+     "start_time": "2024-06-24T22:12:30.733345Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "bad_idx, bad_centuries, bad_authors = get_error_case_idx_and_metadata(res_35, md_df)",
+   "id": "b81c4b7263b7de7c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "idx\trr\tsr\tcentury\tauthor\ttitle\n",
+      "3\tcomic\tother\t20\tJon Juaristi\tPatria mía\n",
+      "8\tother\tcomic\t20\tJon Juaristi\tCarta en Noviembre\n",
+      "11\tcomic\tother\t20\tJon Juaristi\tA Vinogrado, avinagrado\n",
+      "12\tother\tcomic\t17\tMatías Frigola y Picón\tA la muerte del doctor Juan Pérez de Montalbán\n",
+      "21\tcomic\tother\t19\tManuel del Palacio\tSoneto filosófico\n",
+      "26\tother\tcomic\t16\tCamila Lucinda\tAl peregrino\n",
+      "28\tother\tcomic\t19\tEmilio Mora\tTempestades\n",
+      "29\tother\tcomic\t19\tManuel del Palacio\tSin esperanza\n",
+      "30\tother\tcomic\t18\tJuan Meléndez Valdés\tLas armas del amor\n",
+      "33\tother\tcomic\t16\tLuis Vélez de Guevara\tDe su comedia Celos, amor y venganza\n",
+      "34\tother\tcomic\t16\tFrancisco de Figueroa\tSoneto\n",
+      "36\tother\tcomic\t16\tFrancisco de Terrazas\tSoñé que una piedra me arrojaba\n",
+      "40\tother\tcomic\t19\tFrancisco Javier Ugarte y Pages\tTu mirada\n",
+      "42\tother\tcomic\t19\tJulio Herrera y Reissig\tEl granjero\n",
+      "44\tother\tcomic\t19\tManuel José Othón\tIdilio salvaje – IV\n",
+      "45\tother\tcomic\t19\tManuel José Othón\tRetrato\n",
+      "47\tother\tcomic\t19\tJacinto Verdaguer\tLadrar a la luna\n",
+      "48\tother\tcomic\t19\tJosé Gonzalo Roldán\tSoñar y amar\n",
+      "49\tother\tcomic\t19\tRubén Darío\tMELANCOLÍA\n",
+      "50\tother\tcomic\t19\tRubén Darío\tSONETO AUTUMNAL AL MARQUÉS DE BRADOMÍN\n",
+      "51\tcomic\tother\t19\tManuel del Palacio\tLa erupción\n",
+      "78\tother\tcomic\t19\tManuel Bernabé\tA LAONG - LAAN\n",
+      "79\tother\tcomic\t17\tJuan Francisco Andrés\tA Raimundo de Peñafort\n",
+      "80\tother\tcomic\t17\tFrancisco de Sigüenza\tSoneto\n",
+      "81\tother\tcomic\t17\tJuan Francisco de Prado\tA San Isidro\n",
+      "83\tother\tcomic\t19\tAntonio Ros de Olano\tRegalando una botlla de vino añejo\n",
+      "84\tother\tcomic\t19\tRosario («Crisantema») Sansores\tLa casada\n",
+      "86\tother\tcomic\t16\tFrancisco de Terrazas\tSoñé que una piedra me arrojaba\n",
+      "88\tother\tcomic\t19\tMelchor Palau y Català\tSonetos – IV\n",
+      "89\tother\tcomic\t16\tLuis Martín de la Plaza\tSoneto\n",
+      "90\tother\tcomic\t19\tManuel Gutiérrez Nájera\tLa mariposa y el árbol\n",
+      "92\tother\tcomic\t17\tJuan de San Martín\tSoneto\n",
+      "94\tother\tcomic\t19\tManuel Reina\tLa perla\n",
+      "95\tother\tcomic\t19\tConcepción Robles\tYo he leído\n",
+      "99\tother\tcomic\t19\tFernando Maristany\tJean Vauquelin de la Fresnaye\n",
+      "100\tother\tcomic\t19\tEsther Lucila Vázquez\tRosas\n"
+     ]
+    }
+   ],
+   "execution_count": 314
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T22:12:30.887430Z",
+     "start_time": "2024-06-24T22:12:30.848395Z"
     }
    },
    "cell_type": "code",
@@ -304,18 +399,18 @@
        "Counter({19: 21, 16: 6, 17: 5, 20: 3, 18: 1})"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 282
+   "execution_count": 315
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.387545Z",
-     "start_time": "2024-06-24T21:05:40.373660Z"
+     "end_time": "2024-06-24T22:12:30.906670Z",
+     "start_time": "2024-06-24T22:12:30.891488Z"
     }
    },
    "cell_type": "code",
@@ -356,18 +451,18 @@
        "         'Esther Lucila Vázquez': 1})"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 283
+   "execution_count": 316
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.406675Z",
-     "start_time": "2024-06-24T21:05:40.392693Z"
+     "end_time": "2024-06-24T22:12:30.926647Z",
+     "start_time": "2024-06-24T22:12:30.911351Z"
     }
    },
    "cell_type": "code",
@@ -479,18 +574,18 @@
        " 'comic']"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 284
+   "execution_count": 317
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T21:05:40.420944Z",
-     "start_time": "2024-06-24T21:05:40.410999Z"
+     "end_time": "2024-06-24T22:12:30.944904Z",
+     "start_time": "2024-06-24T22:12:30.930729Z"
     }
    },
    "cell_type": "code",
@@ -512,13 +607,13 @@
    ],
    "id": "f2e3dc64fd04ce4b",
    "outputs": [],
-   "execution_count": 285
+   "execution_count": 318
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:01:41.296946Z",
-     "start_time": "2024-06-24T22:01:41.259327Z"
+     "end_time": "2024-06-24T22:12:30.996133Z",
+     "start_time": "2024-06-24T22:12:30.953522Z"
     }
    },
    "cell_type": "code",
@@ -598,13 +693,13 @@
    ],
    "id": "fba087a8d57babe0",
    "outputs": [],
-   "execution_count": 299
+   "execution_count": 319
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T22:02:03.566891Z",
-     "start_time": "2024-06-24T22:02:02.881928Z"
+     "end_time": "2024-06-24T22:12:31.553231Z",
+     "start_time": "2024-06-24T22:12:31.005068Z"
     }
    },
    "cell_type": "code",
@@ -614,7 +709,7 @@
    ],
    "id": "afada7506590530",
    "outputs": [],
-   "execution_count": 301
+   "execution_count": 320
   }
  ],
  "metadata": {
